0.9.42 / 2019-10-xx
 * Save state in background thread (tickets #2595, #2632)
 * Fix ISE in language dialog (ticket #2631)
 * Fix NPE in create tunnel (ticket #2629)

0.9.42 / 2019-08-28
 * Possible fix for tunnel edit dialog crash (ticket #2598)

0.9.41 / 2019-07-03
 * New 64 bit libjbigi (ticket #2503)
 * Update 32 bit jbigi to GMP 6.1.2
 * Fix for client tunnels not starting after reseed
 * UPnP Fixes (ticket #2499)
 * WebView crash fixes (ticket #2390)
 * i2ptunnel crash fix (ticket #2552)
 * i2ptunnel ANR fix (ticket #2491)
 * Browser help pages improvements (tickets #2521, 2523)
 * Code cleanups and fixes
 * Update visibility of floating menu items
 * Put our router info at top of list
 * Table layout cleanups
 * Fixes for threads remaining after router stop
 * Remove BOB
 * Remove welterde IRC tunnel
 * Various lint fixes
 * New translations: Add cs, da, el
 * Add missing translations to menu: ar, fi, gl, hu, zh_TW

0.9.40 / 2019-05-10
 * Open local I2CP socket for 3rd party apps
 * Fix News URLs
 * Numerous bug fixes (see trac)

0.9.39 / 2019-03-23
 * Set App ID

0.9.38 / 2019-01-27

0.9.37 / 2018-10-10

0.9.36 / 2018-08-27

0.9.35 / 2018-07-03

0.9.34 / 2018-04-25

0.9.33 / 2018-02-18
 * Translation updates

0.9.32 / 2017-11-28
 * Fixed "Application Not Responding" error when restarting all tunnels
 * Fixed crashes when:
   * opening the console menu
   * starting the router
   * starting the router for the first time
   * viewing tunnels
   * viewing the addressbook
   * opening the addressbook menu
   * configuring addressbook subscriptions
   * using a configuration wizard
   * loading a B64 Destination from file
   * viewing tunnel settings
   * saving tunnel settings
   * installing a tunnel's recommended app without a market app
   * installing a browser without a market app
   * rotating the screen while using the built-in browser
 * Added a "sync" icon to more clearly indicate tunnel "starting" status